<resources>
    <string name="app_name">ProyectoPDM</string>
    <string name="title_activity_menu_opciones">MenuOpcionesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_miperfil">Mi perfil</string>
    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_recordacademico">Record Academico</string>
    <string name="menu_crear_actividad">Nueva Actividad</string>
    <string name="menu_estudiantes">Estudiantes</string>
    <string name="menu_docentes">Docentes</string>
    <string name="menu_editar_bitacora">Editar BItacora</string>
    <string name="menu_listado_actividad">Actividades</string>
    <string name="menu_resumen">Resumen servico social</string>
    <string name="menu_editar_actividad">Editar Actividad</string>
    <string name="menu_editar_detalle_servicio">Editar Detalle Servicio</string>
    <string name="menu_detalle_act">Detalle actividad</string>
    <string name="menu_listadoActividades">Actividades</string>
    <string name="menu_modalidades">Modalidades</string>
    <string name="menu_act" translatable="false">Mis actividades</string>
    <string name="menu_miServicioSocial">Mi servicio social</string>
    <string name="menu_cerrarsesion">Cerrar sesion</string>
    <string name="menu_carreras">Carreras</string>
    <string name="menu_proyectosAsigandos">Proyectos asignados</string>
    <string name="menu_agregar_bitacora">Nueva Bitacora</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="controlServcioSocial">Control de Servicio Social</string>

    <string name="nombreDocente">Nombre</string>
    <string name="correoDocente">Email</string>
    <string name="apellidoDocente">Apellidos</string>
    <string name="duiDocente">DUI</string>
    <string name="telefonoDocente">Telefono</string>
    <string name="listApellidoDocente">Apellido</string>
    <string name="btnAgregarDocente">Agregar</string>
    <string name="titleDocente">Eliminar Docente</string>
    <string name="messageDocente">Esta seguro que desea eliminar el docente</string>

    <string name="btnactionbareliminar">Eliminar</string>
    <string name="btnactionbareditar">Editar</string>
    <string name="nitDocente">NIT</string>

    <!-- Para Bitacora-->
    <string name="btnCrearBitacora">Crear</string>
    <string name="cicloBitacora">Selecciona un Ciclo</string>
    <string name="mesBitacora">Selecciona un Mes</string>
    <string name="anioBitacora">Anio</string>
    <string name="camposVacios">Campos vacios</string>
    <string name="bitacora">Bitacora</string>

    <!-- Para AlertDialog EliminarBitacora-->
    <string name="titleBitacora">Eliminar </string>
    <string name="messageBitacora">Esta seguro que desea eliminar el registro</string>
    <string name="buttonNegacion">CANCELAR</string>
    <string name="buttonConfirm">ELIMINAR</string>
    <string name="title_activity_menu_opciones2">MenuOpciones2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Actividad adaptador -->
    <string name="actividad">Actividad</string>
    <string name="FechaAct">Fecha</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="name_activity">Actvidad</string>
    <string name="date_activity">Fecha de la actividad</string>
    <string name="num_hours_activity">Num. horas de actividad</string>
    <string name="description_activity">Descripcion de la actividad</string>
    <string name="seleccionFecha">Selecciona una Fecha</string>

    <string name="carnetEstudiante">Carnet</string>
    <string name="nombreEstudiante">Nombre</string>
    <string name="apellidoEstudiante">Apellidos</string>
    <string name="telefonoEstudiante">Telefono</string>
    <string name="emailEstudiante">Email</string>
    <string name="duiEstudiante">DUI</string>
    <string name="domicilioEstudiante">Domicilio</string>
    <string name="nitEstudiante">NIT</string>
    <string name="BOTONAgregarAlumno">Agregar</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="passUsuario">Password</string>
    <string name="listEstudianteNombre">Nombre</string>
    <string name="listEstudianteApellido">Apellido</string>
    <string name="listEstudianteCarnet">Carnet</string>
    <string name="listEstudianteCorreo">Correo</string>


    <string name="areaNom">Nombre</string>
    <string name="areaDes">Descripción</string>
    <string name="areabtnA">Agregar</string>
    <string name="areaTitulo">Area</string>
    <!-- DetalleResumenServicioSocial -->
    <string name="estado">Estado de Servicio</string>
    <string name="horasAs">Num. de horas asignadas</string>
    <string name="monto">Monto(Precio de mercado)</string>
    <string name="benDirectos">Num de beneficiarios directos</string>
    <string name="benInirectos">Num de beneficiarios indirectos</string>
    <string name="observacionesD">Observaciones</string>
    <string name="btnCrearDetalle">Registrar</string>
    <string name="actualizar_actividad">Actualizar</string>
    <string name="navBarEditar">Editar</string>
    <string name="navBarEliminar">Eliminar</string>
    <string name="btnEditarBitacora">Actualizar</string>
    <string name="editCarrera">Editar Carrera</string>

    <string name="titleArea">Area</string>
    <string name="creArea">Crear Area</string>
    <string name="editArea">Editar Area</string>
    <string name="cd">Crear docente</string>

    <string name="ce">Crear estudiante</string>
    <string name="ee"> Editar estudiante</string>
    <string name="cc"> Crear Carrera</string>
    <string name="ea">Editar area</string>
    <string name="dss">Detalle servicio social</string>
    <string name="cr">Crear Record</string>
    <string name="er"> Editar Record</string>
    <string name="ed">Editar docente</string>
    <string name="md">Modificar docente</string>
    <string name="me">Modificar estudiante</string>
    <string name="p">Proyectos</string>
    <string name="cp">Crear proyectos</string>
    <string name="eee">Editar estudiante</string>
    <string name="ep">Editar proyecto</string>
    <string name="cssNom">Control de Servicio Social</string>

    <string name="web_app_client_id" translatable="false">324915635762-g4hm7lv7s99v8bkfdr84a7flje19kohb.apps.googleusercontent.com</string>

    <string name="fechaApertura">Fecha de apertura</string>
    <string name="carnetEstudianteAp">Carnet</string>
    <string name="menu_correo" translatable="false">Correo</string>
    <string name="back" translatable="false"><![CDATA[<-]]></string>
    <string name="forward" translatable="false"><![CDATA[->]]></string>
    <string name="calendario" translatable="false">Calendario</string>
    <string name="long_message">Crea una nueva bitacora!</string>
    <string name="decline">CANCELAR</string>
    <string name="accept">REGISTRAR</string>
    <string name="estP">id Estudiante</string>
    <string name="registrarse">Registrarse</string>


    <string name="capture_button_alt" translatable="false">Capture</string>
    <string name="unknown" translatable="false">UNKNOWN</string>
</resources>